Added connection do databases. Updated composite service methods